// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Pure component match expected snapshot 1`] = `
<withStyles(ContainerPure)
  className=""
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <div
        className="default-Footer-footer"
      >
        <withStyles(RowPure)
          className=""
          reverse={false}
        >
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={0}
            xsOffset=""
          />
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={12}
            xsOffset=""
          >
            <div
              className="default-Footer-copyright"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={0}
            xsOffset=""
          >
            <withStyles(HiddenPure)
              className=""
              lg=""
              md="down"
              sm=""
              xl=""
              xs=""
            >
              <div
                className="default-Footer-socialMediaLinkIconContainer"
              />
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;

exports[`Footer Pure component with socialMediaLinkArray match expected snapshot 1`] = `
<withStyles(ContainerPure)
  className=""
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <div
        className="default-Footer-footer"
      >
        <withStyles(RowPure)
          className=""
          reverse={false}
        >
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={0}
            xsOffset=""
          />
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={12}
            xsOffset=""
          >
            <div
              className="default-Footer-copyright"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            className=""
            lg={4}
            lgOffset=""
            md=""
            mdOffset=""
            sm=""
            smOffset=""
            xl=""
            xlOffset=""
            xs={0}
            xsOffset=""
          >
            <withStyles(HiddenPure)
              className=""
              lg=""
              md="down"
              sm=""
              xl=""
              xs=""
            >
              <div
                className="default-Footer-socialMediaLinkIconContainer"
              >
                <withStyles(SocialMediaLink)
                  className="default-Footer-socialMediaLinkIcon"
                  socialMediaLinkItem={
                    Object {
                      "href": "https://vk.com/exmachina2",
                      "id": 2,
                      "order": 2,
                      "svgImageName": "Vk",
                      "title": "VK - Ex Machina group",
                    }
                  }
                />
                <withStyles(SocialMediaLink)
                  className="default-Footer-socialMediaLinkIcon"
                  socialMediaLinkItem={
                    Object {
                      "href": "http://steamcommunity.com/groups/Ex_Machina",
                      "id": 1,
                      "order": 1,
                      "svgImageName": "Steam",
                      "title": "Steam - Ex Machina Community",
                    }
                  }
                />
              </div>
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;
